text: intro 1st half

--- a/main.tex
+++ b/main.tex
@@ -52,10 +52,14 @@
 % Multicolumns
 \setlength{\columnsep}{1cm}
 
+% Titles
+\usepackage{titlesec}
+\titlespacing{\section}{0pc}{0.5pc}{0pc}
+
 % Headers and footers
 \usepackage{fancyhdr}
 \pagestyle{fancy}
-\rhead{Khakhalin AS. Graph analysis of collision detection networks. (DRAFT) Page \thepage}
+\rhead{Khakhalin AS. Graph analysis of collision detection networks. Page \thepage}
 \cfoot{} % To kill footer page numbers
 
 \begin{document} % --------------------- Document start ----------------
@@ -65,7 +69,7 @@
 % It will ignore everything until the endignore pair, and so on.
 % We need to get down to 4500 words in the main text.
 
-\linenumbers % Comment to suppress line numbers
+% \linenumbers % Comment to suppress line numbers
 
 % title goes here:
 %\twocolumn[
@@ -83,9 +87,18 @@ Arseny S. Khakhalin\textsuperscript{1,*}
 
 * Correspondence: khakhalin@bard.edu
 
+
+% TODO
+
+% Fix figures
+
+% Change Fig. to Figure everywhere
+
+% Sort references by year, to make citations correct
+
 \section*{Abstract}
-% 224 words now; should be 200
-Looming is one of the most salient visual stimuli an animal may encounter, yet mechanisms of looming detection in vertebrates are poorly understood. For many animals, key computations involved in looming detection and collision avoidance seem to be performed by distributed networks, making it hard to tease out the underlying mechanisms. In this study, we contrast a computational developmental model of the optic tectum with the analysis of directed connectivity graphs, reconstructed from high-speed calcium imaging recording in \textit{Xenopus} tadpoles. We report a difference in degree distributions and modularity of tectal networks reconstructed from younger and older tadpoles. We also describe that looming-selective cells in the tectum tended to receive more inputs, and had higher Katz centrality than non-selective cells. We compare these results to predictions from a model governed by spike-time-dependent plasticity, homeostatic intrinsic plasticity, synaptic competition, and driven by structured visual inputs. We show that under general conditions, the model network developed robust looming selectivity, and replicated some network changes observed in imaging experiments, including changes in modularity and degree distribution. Other changes predicted by the model (hierarchy, efficiency, and spatial distribution of selective cells) were however not observed in imaging experiments. Finally, by comparing several reduced models, we predict which developmental rules could be most critical for the development of looming selectivity in the brain.
+% 206 words now; should be 200
+Looming is one of the most salient visual stimuli an animal may encounter, yet mechanisms of looming detection in vertebrates are poorly understood. For some animals, key computations involved in looming detection and collision avoidance are performed by distributed networks, making it hard to tease out underlying mechanisms. In this study, we contrast a computational developmental model of the optic tectum with the analysis of directed connectivity graphs, reconstructed from high-speed calcium imaging recording in \textit{Xenopus} tadpoles. We report differences in degree distributions and modularity of networks reconstructed from younger and older animals, and show that looming-selective cells tended to receive more inputs, and had higher Katz centrality than non-selective cells. We compare these results to predictions from a model governed by spike-time-dependent plasticity, homeostatic intrinsic plasticity, synaptic competition, and driven by structured inputs. We show that the model developed robust looming selectivity, and replicated several effects observed in imaging experiments, including changes in modularity and degree distribution. Other changes predicted by the model (hierarchy, efficiency, and spatial distribution of selective cells) were not observed in imaging experiments. By comparing several reduced models, we predict which developmental rules are most critical for the development of looming selectivity in the brain.
 %TC:ignore 
 \bigskip
 
@@ -94,17 +107,17 @@ Looming is one of the most salient visual stimuli an animal may encounter, yet m
 
 \section*{Introduction}
 
-Few sensory stimuli are as conspicuous and ill boding as visual looming. A retinal projection that is small, but quickly grows in size, may promise either a painful collision, or a meeting with a hungry predator, and so it inherently calls for an action, such as an avoidance maneuver, freezing, defensive posturing, or a blink. Moreover, looming detection has to be fast to be meaningful. Not surprisingly, it is described in virtually every type of animals that uses vision, from insects to primates \citep{Pereira2016}.
+Few sensory stimuli are as ill boding for an animal as visual looming. A retinal projection that is small, but quickly grows in size, may promise either a painful collision, or a meeting with another animal, perhaps a predator, and so it inherently calls for an action: an avoidance maneuver, freezing, or defensive posturing, such as a blink. Moreover, looming detection has to be fast to be meaningful. Not surprisingly, it is described in virtually every type of animals that uses vision, from insects to primates \citep{Pereira2016}.
 
-In different animals, looming detection seems to rely on a variety of networks and solutions \citep{frost2004review}, including dimming detectors in the retina \citep{ishikane2005,munch2009}, opponent motion detection \citep{klapoetke2017looming}, and competitive spike-frequency adaptation \citep{peron2009adaptation,fotowat2011multiplexing}. Even within a single clade of anuran amphibians (frogs), animals seem to employ several competing looming detection mechanisms, such as non-linear detection of retinal oscillations \citep{baranauskas2012}, and rebound of recurrent activity \citep{jang2016}. Moreover, it seems that at least some of these competing mechanisms may lead to different subtypes of avoidance responses, as it was described in insects \citep{card2008tradeoffs,chan2013avoidance}, fish \citep{burgess2007twoescapes,portugues2009behaviors,budick2000repertoire,temizer2015pathway,bhattacharyya2017assessment}, and tadpoles \citep{khakhalin2014}.
+In different animals, looming detection seems to rely on a variety of network solutions \citep{frost2004review}, including dimming detectors in the retina \citep{ishikane2005,munch2009}, opponent motion detection \citep{klapoetke2017looming}, and competitive spike-frequency adaptation \citep{peron2009adaptation,fotowat2011multiplexing}. Even within a clade of anuran amphibians (frogs), animals seem to employ at least two competing looming detection mechanisms: non-linear detection of retinal oscillations \citep{baranauskas2012}, and rebound of recurrent activity \citep{jang2016}. Moreover, it seems that some of these competing mechanisms may lead to different subtypes of avoidance responses, as it was described in insects \citep{card2008tradeoffs,chan2013avoidance}, fish \citep{burgess2007twoescapes,portugues2009behaviors,budick2000repertoire,temizer2015pathway,bhattacharyya2017assessment}, and tadpoles \citep{khakhalin2014}.
 
-While this co-existence of multiple alternative solutions for looming detection may seem overwhelming, it actually matches the recent insight from the field of machine learning. Simple, crude ways of detecting important features of sensory stimuli are critical for training more sophisticated and efficient networks, that are then used for more nuanced analysis of the sensory world at later stages of development \citep{marblestone2016deeplearning}. In case of looming stimuli in tadpoles, early in development, when the collision detection is still weak \citep{dong2009}, animals may use “hardwired” dimming receptors in the retina \citep{baranauskas2012} both to detect collisions, and to “bootstrap” more sophisticated motion-dependent networks in the tectum. Later, these motion-dependent networks can serve as a first line of defense, identifying early phases of looming, and providing information to motor neurons in the hindbrain to perform nuanced course correction \citep{khakhalin2014,bhattacharyya2017assessment}, while dimming detectors could remain as a backup, mediating more urgent and less coordinated responses \citep{khakhalin2014}. Moreover, every time collision avoidance is not performed perfectly, these sensorimotor networks can be further refined, relying on inputs from the lateral line and mechanosensory detectors in the skin \citep{felch2016, helmbrecht2018topography}.
+While this co-existence of multiple alternative solutions for looming detection may seem overwhelming, it matches recent insight from the field of machine learning. Simple, crude ways of detecting important features of sensory stimuli are critical for training more sophisticated and efficient networks, that are then used for nuanced analysis of the sensory world at later stages of development \citep{marblestone2016deeplearning}. In case of looming stimuli in tadpoles, early in development, when the collision detection is still weak \citep{dong2009}, animals may use “hardwired” dimming receptors in the retina \citep{baranauskas2012} both to detect collisions, and to “bootstrap” more sophisticated motion-dependent networks in the tectum. Later, motion-dependent networks can serve as a first line of defense, identifying early phases of looming, and providing information to motor neurons in the hindbrain to perform fine course correction \citep{khakhalin2014,bhattacharyya2017assessment}, while dimming detectors could remain as a backup, mediating more urgent and less coordinated responses \citep{khakhalin2014}. Moreover, every time collision avoidance is not performed perfectly, sensorimotor networks can be further refined, based on inputs from the lateral line and mechanosensory detectors in the skin \citep{felch2016, helmbrecht2018topography}.
 
-Traditionally, the golden standard for describing a mechanism of a behavior was to demonstrate that activation of a certain structure is both sufficient and required for this behavior \citep{krakauer2017reductionist}. This reductionist approach works well in some systems, such acoustic startle detectors \citep{korn2005mauthner}, or central pattern generators in the spinal cord \citep{roberts2010hatchling}, that are compact and isolated enough. Yet most systems in the brain act as complex, interconnected, distributed dynamical systems, which makes it hard to represent them as a sum of “parts”, with distinct functions ascribed to each of these parts \citep{gao2015simplicity}. It is possible to study these complex systems statistically, identifying properties that hold “on average”, and differ in functional and dysfunctional networks, but a statistical approach typically does not grant true insight into the “meaning” of these properties \citep{bassett2018models}. For example, knowing that a disordered brain does not adhere to the same network statistics as a normal brain would not necessarily tell us how to “fix” it, even if we had a method to rewire individual neurons in a targeted fashion.
+Traditionally, the golden standard for describing a mechanism of a certain behavior is to demonstrate that neuronal activation is both sufficient and required for this behavior \citep{krakauer2017reductionist}. This reductionist approach works well in systems such as acoustic startle detectors \citep{korn2005mauthner}, or central pattern generators in the spinal cord \citep{roberts2010hatchling}, that are compact and isolated enough. Yet most systems in the brain act are interconnected, and distributed, making it hard to represent them as a sum of “parts”, with distinct functions ascribed to each of these parts \citep{gao2015simplicity}. It is possible to study these complex systems statistically, identifying properties that hold “on average”, and differ in functional and dysfunctional networks, but a statistical approach does not necessarily grant insight into the “meaning” of these properties \citep{bassett2018models}. For example, knowing that a disordered brain does not adhere to the same network statistics as a normal brain would not necessarily tell us how to “fix” it, even if we had a method to rewire individual neurons in a targeted fashion.
 
-A more promising approach is to study the origin of functional structures in the brain. Most neural networks are not truly hardwired, but dynamically evolve from a set of developmental rules \citep{pietri2017emergence}, similar to how it happens for fractals and Turing patterns \citep{lefevre2010reaction,bullmore2012economy}, while also relying on streams of structured sensory information coming from the external world \citep{gao2015simplicity}. This insight is encouraging, as developmental rules in the brain act at the level of individual cells and their compartments, such as dendrites and synapses, which implies that while the ultimate product of these rules is exceedingly complex, the rules themselves have to be relatively simple \citep{bassett2018models}. Together, it may mean that our best chance to truly “understand” the brain lies in identifying the space of rules that lead to the development of functional networks \citep{linderman2017constrain}. This general approach proved to be fruitful in recent years, as several complex network phenomena, including high-order receptive fields \citep{bashivan2018neural}, grid cells \citep{banino2018grid}, and decision circuits \citep{haesemeyer2018convergent}, were shown to evolve spontaneously in systems governed by intuitive developmental rules. 
+A more promising approach is to study the origin of functional structures in the brain. In most cases, the topology of biological neural networks is not truly hardwired, but dynamically evolves from a set of developmental rules \citep{pietri2017emergence}, similar to how it happens for fractals or Turing patterns \citep{lefevre2010reaction,bullmore2012economy}, while also relying on streams of structured information propagating through these networks \citep{gao2015simplicity}. This insight is encouraging, as developmental rules in the brain act at the level of individual cells and their compartments, such as dendrites and synapses, which implies that while the ultimate product of these rules is exceedingly complex, the rules themselves have to be relatively simple \citep{bassett2018models}. It may mean that our best chance to truly “understand” the brain lies in identifying the space of rules that lead to the development of functional networks \citep{linderman2017constrain}. This general approach proved to be fruitful in recent years, as several complex network phenomena, including high-order receptive fields \citep{bashivan2018neural}, grid cells \citep{banino2018grid}, and decision circuits \citep{haesemeyer2018convergent}, were shown to evolve spontaneously in systems governed by intuitive developmental rules. 
 
-In this paper, we look at connectomic correlates of looming selectivity in the developing optic tectum of \textit{Xenopus} tadpoles. As a model, tadpole tectum is uniquely suitable for studies of sensory integration, as its neurons are excessively plastic \citep{pratt2007intrinsic}[Busch], strongly interconnected \citep{james2015}, and develop reliable looming selectivity within about a week, as tadpoles mature from developmental stage 46 to stage 49 \citep{dong2009,khakhalin2014}. The refinement of tectal connectivity is dominated by spike-time-dependent plasticity \citep{zhang1998stdp,mu2006stdp}, which is known to favor development of synfire chains \citep{fiete2010chains,zheng2014synfire}: groups of neurons linked with sequential connections that selectively respond to certain patterns of temporal activation \citep{clopath2010stdpcoding}. As  tectal neurons spike relatively slowly, with broad spikes and long refractory periods \citep{ciarleglio2015,jang2016}, these synfire chains are expected to have delays of about 10 ms from one neuron to another, compared to $\sim$2 ms in the mammalian cortex [ref]. This slower signal propagation brings intratectal connections to the threshold of direct detectability by fast Ca imaging techniques that operate at rates of ~100 frames/s, allowing observations of not just co-firing of neurons within each ensemble or clique \citep{reimann2017,avitan2017spontaneous}, but propagation of signal through these ensembles.
+In this paper, we look at connectomic correlates of looming selectivity in the developing optic tectum of \textit{Xenopus} tadpoles. As a model, tadpole tectum is uniquely suitable for studies of sensory integration, as its neurons are excessively plastic \citep{pratt2007intrinsic}[XXXBusch], strongly interconnected \citep{james2015}, and develop reliable looming selectivity within about a week of development, as tadpoles mature from developmental stage 46 to stage 49 \citep{dong2009,khakhalin2014}. The refinement of tectal connectivity is dominated by spike-time-dependent plasticity \citep{zhang1998stdp,mu2006stdp}, which is known to favor development of synfire chains \citep{fiete2010chains,zheng2014synfire}: groups of neurons linked with sequential connections that selectively respond to certain patterns of temporal activation \citep{clopath2010stdpcoding}. As  tectal neurons spike relatively slowly, with broad spikes and long refractory periods \citep{ciarleglio2015,jang2016}, these synfire chains are expected to have delays of about 10 ms from one neuron to another, compared to $\sim$2 ms in the mammalian cortex [ref]. This slower signal propagation brings intratectal connections to the threshold of direct detectability by fast Ca imaging techniques that operate at rates of ~100 frames/s, allowing observations of not just co-firing of neurons within each ensemble or clique \citep{reimann2017,avitan2017spontaneous}, but propagation of signal through these ensembles.
 
 Here we use high-speed Ca imaging data to infer connectivity of small sub-networks within the tectum, describe connectivity patterns in younger and older tadpoles, and compare them to predictions from a simple developmental simulation. We hypothesized that by comparing statistical properties of networks generated by a family of models to networks reconstructed in imaging experiments we would be able to reverse-engineer developmental rules that govern development of looming-sensitive networks in the tectum. We show that our model predicted some, but not all aspects of topology and functionality in looming-sensitive networks, and that both matches and contradictions between the model and the experiment are not clear enough to draw simple conclusions. Nevertheless, we report several new findings, including some very surprising negative results, and as a proof of concept, demonstrate looming detectors can emerge in developing networks through a simple interplay of structured inputs and plasticity.
 
@@ -140,7 +153,7 @@ We then considered the second, more computationally demanding definition of sele
 
 The selectivity for scrambled stimuli over flashes correlated with selectivity for looming stimuli over flashes in both developmental groups: within-brain $r=$ 0.82$\pm$0.13, $p_{1t}=$3e-12 for younger animals, and 0.75$\pm$0.18, $p_{t1}=$ 3e-11 older ones (Fig 2D); no change in development ($p_t=$ 0.3). On the contrary, the preference for looming over flashes did not correlate with preference for looming over scrambled (Fig 2E; $r=$ 0.03$\pm$0.29, $p_{1t}=$ 0.7 for stage 46; 0.13$\pm$.30, $p_{1t}=$ 0.1 for stage 49). This further suggests that at least the majority of cells in the tectum responded to stimulus dynamics, rather than to its geometry.
 
-Finally, as a most holistic way to quantify tectal network selectivity, we looked at the total power of tectal responses to predict stimulus identity \citep{avitan2016limitations}, known as "stimulus encoding" [XXX]. We ran a logistic regression on one half of the data, linking amplitudes of tectal cells responses in each trial to the type of stimulus used in this trial. Then we measured the quality of this linkage on the second half of recorded data (Fig. 2F). The quality of prediction was rather low: 59$\pm$12\% for younger, and 62$\pm$13\% for older tadpoles, with no change in development ($p_t=$ 0.6).
+Finally, as a most holistic way to quantify tectal network selectivity, we looked at the total power of tectal responses to predict stimulus identity \citep{avitan2016limitations}, known as "stimulus encoding". We ran a logistic regression on one half of the data, linking amplitudes of tectal cells responses in each trial to the type of stimulus used in this trial. Then we measured the quality of this linkage on the second half of recorded data (Fig. 2F). The quality of prediction was rather low: 59$\pm$12\% for younger, and 62$\pm$13\% for older tadpoles, with no change in development ($p_t=$ 0.6).
 
 To assess cell-to-cell variability of responses, we performed exploratory factor analysis (principal component analysis, followed by promax rotation) of responses within each preparation. We restricted analysis to looming stimuli, as otherwise factor analysis detected cell-to-cell differences in selectivity, while we wanted to look at differences in dynamics within a single response type. The first and second principal components explained on average 19$\pm$7\% and 4$\pm$1\% of variance in younger tadpoles, and 24$\pm$14\% and 3$\pm$1\% in older tadpoles, and were largely different response timing (Fig. 3A). Early responding cells tended to group together in one part of the recorded field (Fig. 3B), and we were able to quantify the position of this early responding group of cells in each experiment, by maximizing the correlation between distances to the center of interest, and relative scores of the early response component in each cell. The fit was robust, with $p<$ 0.05 in every experiment (30/30), and average achieved correlation of $r=$ 0.59$\pm$0.23. To assess possible overfitting, we performed same analysis after reshuffling cell identities 5 times for each experiment, which yielded average $r$ values of only 0.13$\pm$0.06, and $p_r<$ 0.05 in 21\% of experiments. From this we concluded that spatial clustering of cells with early responses to looming stimuli was not an artifact of analysis, even though "optimization of correlations" exaggerated its effect. We interpreted spatial clustering of early-responding cell is a manifestation of a retinotopic map well known to exist in the tectum \citep{ruthazer2004map}, as this map reproduced a looming stimulus projected on the retina. Across cells, the latency of average response correlated with distance from the retinotopy center ($r=$ 0.35 $\pm$ 0.24; correlations individually significant in 25/30 experiments), despite our latency estimations being noisy, especially for low-amplitude cells. Curiously, while visual projections to the tectum are known to be actively remodeled in development \citep{sakaguchi1985refinement,ruthazer2004map,munz2014hebbian}, the quality of functional retinotopic map did not differ between younger and older tadpoles, at least judging from correlations between early component prominence and cell position, that did not change in development (Fig. 3E; $r=$ 0.63 $\pm$ 0.21 and 0.57 $\pm$ 0.25 respectively, $p_t= $0.5), similar to reports in Zebrafish \citep{avitan2016limitations}.
 
@@ -222,7 +235,7 @@ We also hypothesized that selectivity for looming stimuli may gradually “accum
 Spatial variability. \textbf{A}. \textbf{B}. \textbf{C}. \textbf{D}. \textbf{E}. \textbf{F}. }
 \end{figure*}
 
-As the networks we studied are complex and noisy, it was hard to provide a clear mechanistic interpretation of our results, especially as in some cases we used alternative ways to quantify the same intuition, and found the evidence conflicting. For example, for statistical network properties, the effects of non-random degree distribution and mesoscale graph structure often affected network properties in opposite directions (Fig. XXX), leading to small total effects. Similarly, when we tried to quantify how “integrative” was the position of each cell within the connectivity graph, only some of these measurements correlated with cell selectivity for looming stimuli, and it was not clear which of these measurements are objectively “better”, in terms of reflecting the true properties of the network.
+As the networks we studied are complex and noisy, it was hard to provide a clear mechanistic interpretation of our results, especially as in some cases we used alternative ways to quantify the same intuition, and found the evidence conflicting. For example, for statistical network properties, the effects of non-Erdos degree distribution and mesoscale graph structure often affected network properties in opposite directions, leading to small total effects. Similarly, when we tried to quantify how “integrative” was the position of each cell within the connectivity graph, only some of these measurements correlated with cell selectivity for looming stimuli, and it was not clear which of these measurements are objectively “better”, in terms of reflecting the true properties of the network.
 
 To compensate for these limitations, and to provide a theoretical counterpoint to our observations, we built a mathematical model of the developing tectum, and ran this model through the same set of measurements that we applied to our experiments. The model consisted of 81 artificial neurons, arranged in a 9 by 9 grid, that were originally all connected to each other (every neuron to every neuron) with random positive (excitatory) synaptic weights (Fig). The model operated in 10 ms increments, and we interpreted the output of each neuron as its instantaneous firing rate. At each time frame we looked at the activity of the network in the previous frame, and summed up the inputs each neuron would receive from each other neuron. We then used a sliding logistic function to translate these synaptic inputs into postsynaptic spiking (see “Methods” for details).
 
@@ -240,7 +253,7 @@ The summary of modeling results is shown in Fig. 7. In development, the network 
 
 To test whether in our model the nature of visual stimuli could be reconstructed from network activation (stimulus encoding), we used a logistic regression on a vector of total cell responses, as it was done for biological data. We then used a different dataset, consisting of equal shares of looming and non-looming stimuli, to assess the accuracy of our model. The prediction power increased in development, and plateaued at the accuracy level of $\sim$95\%. This suggests that a retinotopic STDP-driven network can achieve highly reliable looming detection if it is equipped with an output layer, potentially representing motor neurons in the hindbrain \citep{helmbrecht2018topography}, and the weights of connections to the output layer are set correctly, e.g. via reinforcement learning.
 
-Unlike in biological experiments, the model was selective for looming stimuli over scrambled stimuli at the full network level, and by the end of the training period, responses to looming stimulus were 43$\pm$7\% stronger than to scrambled. Mean selectivity of individual cells, defined as a Cohen $d$ for responses to looming compared to scramble, was 0.48$\pm$0.07, and 84\% of cells were selective for looming stimuli, which is also different from what we observed in biological experiments. The selectivity for looming over flash correlated with selectivity for scrambled stimuli over flash on a cell by cell basis ($r$= 0.17$\pm$0.10). A subset of highly selective cells did not emerge in the model, as the difference between 90th and 50th percentiles of selectivity were rather low ($\sim$ 0.9 ; Fig XXX).
+Unlike in biological experiments, the model was selective for looming stimuli over scrambled stimuli at the full network level, and by the end of the training period, responses to looming stimulus were 43$\pm$7\% stronger than to scrambled. Mean selectivity of individual cells, defined as a Cohen $d$ for responses to looming compared to scramble, was 0.48$\pm$0.07, and 84\% of cells were selective for looming stimuli, which is also different from what we observed in biological experiments. The selectivity for looming over flash correlated with selectivity for scrambled stimuli over flash on a cell by cell basis ($r$= 0.17$\pm$0.10). A subset of highly selective cells did not emerge in the model, as the difference between 90th and 50th percentiles of selectivity were rather low ($\sim$ 0.9 ; Fig 5F).
 
 The positioning of selective cells within the network was different in model, compared to biological experiments. While in tadpoles, selective cells tended to be located in the middle of the retinotopic field, in the model they tended to be located on the periphery, and selectivity for looming stimuli positively correlated with the distance from the network center. Similar to tadpoles, however, this correlation disappeared in development (from $r\sim$ 0.75 in a naive network, to $r\sim$0.25 in a trained network). Despite the fact that the edges of looming stimuli generally traveled from the center of the retinotopic field to the periphery, there was no correlation between the weight of a cell-to-cell connection and its being facing outward from the network center ($r$=8e-5), which means that connections were equally likely to face outward and inward. Similarly to biological networks, selective cells tended to be closer to each other (29$\pm$3\% closer) than expected by chance, yet unlike what we observed in biological networks, this locality of connections was refined in developments.
 
@@ -250,7 +263,7 @@ The variability of responses to looming stimuli over time, quantified as the num
 
 The distribution of degrees in the model was similar to that in biological experiments: the share of weakly connected cells (weighted in-degree $<$ 0.5) plummeted from $\sim$50\% in naive networks to 9$\pm$2\% by the end of training. On the contrary, the share of cells with degrees of 1 and 2 increased from $\sim$40\% to 83$\pm$2\%. With this changes, the power constant for the degree distribution changed from $\gamma \sim -$1.5 to $-$1.96$\pm$0.03 for both in- and out-degrees, which also qualitatively matched changes in biological experiments.
 
-Finally, we observed that most network measures changed with network development (Fig): efficiency and modularity increased, while clustering decreased. In all three cases, the changes were mainly due to changes in weight and degree distribution, as they persisted if calculated on networks randomized with degree-preserving rewiring (Fig). The hierarchical flow increased mildly in development, and this was entirely due to structured changes in network topology, as the effect was not present in rewired graphs. A robust increase in modularity may seem to be in contradiction with a stable number of ensembles detected in the network, as network modules are expected to form activity ensembles \citep{triplett2018emergence}. We assume that the reason for this difference was that both in biological and computational experiments, we tried to identify ensembles in highly structured responses, and not in long recordings of spontaneous activity.
+Finally, we observed that most network measures changed with network development (Figure 6): efficiency and modularity increased, while clustering decreased. In all three cases, the changes were mainly due to changes in weight and degree distribution, as they persisted if calculated on networks randomized with degree-preserving rewiring. The hierarchical flow increased mildly in development, and this was entirely due to structured changes in network topology, as the effect was not present in rewired graphs. A robust increase in modularity may seem to be in contradiction with a stable number of ensembles detected in the network, as network modules are expected to form activity ensembles \citep{triplett2018emergence}. We assume that the reason for this difference was that both in biological and computational experiments, we tried to identify ensembles in highly structured responses, and not in long recordings of spontaneous activity.
 
 To better assess whether the predictions of the model were confirmed in experiments, we formulated a list of “atomic”, elementary statements about each of the measures were analyzed, looking at whether they changed in development, whether they increased or decreased, and whether they differed from similar measures in a randomized network (Table 1, first two columns). Overall, the model and the experiments were similar in flash-looming selectivity, but did not match in terms of scrambled-looming selectivity. The interplay between cell position and connectivity was also similar, except for the spatial distribution of looming-selective cells within the retinotopic map, which was peripheral in the model, but central in tadpoles. Changes in degree distributions were well matched, but except for modularity, other network measures did not match. When correlations between different measures of node centrality and cell selectivity were considered, some of them matched, but many did not.
 
@@ -267,7 +280,7 @@ While a comparison with one faithfully constructed model is important, a better 
 
 We found that training specifically on looming stimuli was not critical for the model, but training on structured stimuli (as opposed to noise) was. When looming stimuli were replaced by randomized translational and receding stimuli, almost all network variables still developed similarly to the main series of experiments. Selectivity to looming stimuli, both compared to flash and to scramble, also developed similarly, but reached 20-50\% lower selectivity values (Fig. X-X). In contrast, when patterned stimuli were replaced with uncorrelated noise, selectivity did not improve with time, and while the network still changed its efficiency, modularity, and degree distribution, it did not acquire hierarchical structure, and positioning of selective cells within the graph remained random.
 
-Disruption of different developmental rules led to very different changes in network development (Table XX, Fig. XXX). When STDP was replaced by simple Hebbian plasticity, looming selectivity was similar or better than with STDP, and the network generally developed similarly, except that modularity was higher (Fig X), neuronal ensembles were more strongly interconnected (Fig X), and reciprocal connections between pairs of neurons remained probable (Fig X). This is consistent with the idea that, unlike STDP, Hebbian plasticity does not eliminate tight clusters of strongly interconnected neurons \citep{fiete2010chains}. When synaptic competition was replaced with synaptic strength decay, the degree distribution was very different (got flatter rather than sharper); selectivity for looming stimuli was disrupted; the pattern of interactions between cell selectivity and cell centrality became very much unlike waht was observed in the base series of experiments, and the network became strongly hierarchical. The main reason for these differences appears to be that without synaptic competition, chains of connected neurons may lead to "dead-ends" within the graph, while with competition the total output of each neuron remains approximately constant, which leads to the development of cycles. Finally, when intrinsic plasticity was weakened, the network did not acquire sensitivity to looming stimuli, and had simpler response structure (both in terms of PCA results, and ensemble analysis; Fig X), but retained most of changes in network topology. This suggests that intrinsic plasticity is critical for learning, as without it the network was primarily driven by spontaneous activity, which structured it incorrectly.
+Disruption of different developmental rules led to very different changes in network development (Table 1, Figure 6). When STDP was replaced by simple Hebbian plasticity, looming selectivity was similar or better than with STDP, and the network generally developed similarly, except that modularity was higher (Figure 6XXX), neuronal ensembles were more strongly interconnected (Figure XXX), and reciprocal connections between pairs of neurons remained probable (Figure XXX). This is consistent with the idea that, unlike STDP, Hebbian plasticity does not eliminate tight clusters of strongly interconnected neurons \citep{fiete2010chains}. When synaptic competition was replaced with synaptic strength decay, the degree distribution was very different (got flatter rather than sharper); selectivity for looming stimuli was disrupted; the pattern of interactions between cell selectivity and cell centrality became very much unlike what was observed in the base series of experiments, and the network became strongly hierarchical. The main reason for these differences appears to be that without synaptic competition, chains of connected neurons may lead to "dead-ends" within the graph, while with competition the total output of each neuron remains approximately constant, which leads to the development of cycles. Finally, when intrinsic plasticity was weakened, the network did not acquire sensitivity to looming stimuli, and had simpler response structure (both in terms of PCA results, and ensemble analysis; Figure XXX), but retained most of changes in network topology. This suggests that intrinsic plasticity is critical for learning, as without it the network was primarily driven by spontaneous activity, which structured it incorrectly.
 
 \section*{Discussion}
 
@@ -545,7 +558,7 @@ we used an equation with symmetrical Hebb plasticity, and no negative depression
 
 \textbf{No synaptic competition}. Instead of sliding renormalization of all inputs and outputs of each neuron, we allowed synaptic weights to decay to zero: $w_{ji}(t+1) = w_{ji}(t)\cdot (1-\beta)$, where $\beta$ = 0.001.
 
-\textbf{Weak homeostatic plasticity}. In the formula for homeostatic plasticity, instead of change coefficient $r_h$=0.1 we used $r_h$=XXX.
+\textbf{Weak homeostatic plasticity}. In the formula for homeostatic plasticity, instead of change coefficient $r_h$=0.1 we used $r_h$=0.01.
 
 \section*{Acknowledgements}
 
