--- a/main.tex
+++ b/main.tex
@@ -288,21 +288,20 @@ Disruption of different developmental rules led to very different changes in net
 
 In this study, we hypothesized that a developing network governed by spike-time-dependent plasticity, synaptic competition, and stimulated by patterned visual inputs, would 1) spontaneously acquire selectivity for looming stimuli, and 2) develop a non-random network structure. We also hypothesized that these effects would be robust enough to be replicated in biological experiments. The support for our hypothesis is mixed. The model did develop selectivity for looming stimuli (in terms of both average preference, and distributed stimulus encoding), and this improvement in selectivity was resilient to changes in developmental rules. Yet these seemingly robust results were not truly replicated in biological experiments, as we observed no improvement in looming detection in development, and neither average selectivity, stimulus encoding, nor cell specialization differed between younger and older tadpoles. This was particularly surprising in view of a known improvement in collision detection with tadpole age \citep{dong2009}.
 
-The model also developed a non-random network structure, with an openwork connectivity, a scale-free degree distribution, low clustering, and high modularity. Of these predictions, about two thirds were replicated in biological experiments (Table 1, compare columns "Imaging" and "Model / Base"), most notably changes in network degree distribution, share of bidirectional connections, and statements about neuronal ensembles. At the same time, except for network modularity, no 
+The model also developed a non-random network structure, with a scale-free degree distribution, low clustering, and high modularity. Of these predictions, about two thirds were replicated in biological experiments (Table 1, compare columns "Imaging" and "Model / Base"), most notably, changes in network degree distribution, the fate if bidirectional connections, and statements related to neuronal ensembles. These matches between the model and the experiments suggest that at the very least, our model captured the nature of networks developing under the influence of synaptic competition and STDP. Synaptic competition promoted connectivity in weakly connected neurons, while "punishing" overconnected cells, which created light-frame, openwork graph structures \citep{fiete2010chains}, while STDP coordinated activity within subnetworks, increasing modularity \citep{stam2010modular,litwin2014assemblies}, similar to how it was previously described for Hebbian plasticity \citep{triplett2018emergence,damicelli2018topomod}. We did not observe changes in the \textit{number} of neuronal ensembles \citep{avitan2017spontaneous,pietri2017emergence}, but we believe that it is only because our experiments were not suited for ensemble detection, as we worked with strong shared inputs that reliably activated almost every neuron in the network. This is very different from a case of spontaneous activity, where different sub-networks get activated randomly, with activity propagating within modules more readily than between them \citep{avitan2017spontaneous}.
+
+At the same time, most model predictions about how network properties are supposed to change in development did not replicate in biological experiments. There are four possible explanations for this discrepancy. First, while neurons in stage 46 and 49 tadpoles have different synaptic and intrinsic properties \citep{ciarleglio2015}, and while retinal inputs to the tectum continue to refine \citep{tao2005refinement, munz2014hebbian}, the patterns of internal tectal connectivity may be relatively settled by stage 46. In our model, most network measures plateaued, or even slowly reversed late in development, which means that even for a qualitative comparison between the model and the experiment we have to make an assumption about whether stage 46 tadpoles corresponded to a mid-point of development, or whether they fall on the developmental plateau. The absence of improvement in stimulus identity prediction from neuronal activity in older tadpoles, compared to younger ones, suggests that both stages fall on the “plateau”. If true, this would mean that less robust collision avoidance in behaving stage 46 tadpoles \citep{dong2009} is likely to be due to maturation of sensorimotor connections from the tectum to the hindbrain, which we did not assess in this study.
+
+Second, a poor fit between model predictions and biological experiments may be a consequence of low statistical power of this study. With 14 and 16 networks for each of two developmental stages, we could only hope to detect changes of Cohen $d \approx$ 1.0, assuming $p_t<$ 0.05 threshold and 80\% power. Moreover, based on available imaging studies, we can estimate that at stage 49 tadpoles, one side of a tectum contains about 10-15 thousand neurons, as it is about 40 cells across \citep{hiramoto2009}, and packed 6-10 cells deep in its thickest part \citep{hewapathirane2008vivo}, while tapering towards the edges \citep{bollmann2009}. On the other hand, here we reconstructed connectivity within the top layer of 128$\pm$40 cells, in a field of about 12 by 12 neurons, which means that our reconstructions covered only about 1\% of a full tectal network. With a coverage so sparse, our parameter estimations were expected to be noisy, further lowering the power of our tests.
+
+Third, one can question the validity of our connectivity reconstructions, as we did not have a technical opportunity to compare these reconstructions to any sort of "ground truth" connectivity. The best way to address this concern would be to run a set of control experiment, analyzing transfer entropy between pairs of cells proven to be either connected or disconnected, to estimate the power of graph reconstruction from Ca imaging recordings. Unfortunately, these experiments are currently beyond our technical ability, so we have to rely on indirect criteria for successful network reconstruction. Two most important observations that support the validity of our results are the fact that the share of reciprocal connections decreased in development; and that we observed a consistent non-randomness of almost all network measurements in reconstructed networks. Also, we were comforted by a good replication of tectal response shapes (compared to \citep{khakhalin2014}), a good internal replication of edge detection between stimuli types (see Methods), and an observation of retinotopy during responses to looming stimuli.
+
+Finally, the fourth way to explain a relatively poor fit between the model and the imaging experiments is to assume that the mechanisms of looming selectivity in the tectum are different from the synfire chain model we proposed in this study \citep{zheng2014synfire,cohen2002synreview}, and closer to either delayed recurrent activation model \citep{khakhalin2014,jang2016}, or dynamic inactivation model \citep{fotowat2011multiplexing}. From this point of view, two most concerning discrepancies between the model and the experiments was the position of selective cells within the network (central in tadpoles, peripheral in the model), and the difference in centrality measurements related to local signal integration (high in-degree and Katz rank in biological experiments, but no effect in the model). %It is however possible that real tectum USES DIFFERENT STUFF NOT JUST ONE STUFF
 
 
 
 
-There are thee possible explanations for these discrepancies between the model, and the experiment. First, while neurons in stage 46 and 49 tadpoles have different synaptic and intrinsic properties \citep{ciarleglio2015}, and continue to refine retinal inputs to the tectum \citep{tao2005refinement,munz2014hebbian}, the patterns of internal tectal connectivity may be relatively settled by stage 46. In the model, most network measures plateaued, or even slowly reversed in late development, which means that even for a qualitative comparison between the model and the experiment we have to make an important assumption about whether stage 46 tadpoles correspond to a mid-point of development, or whether they fall on the developmental plateau. The absence of improvement in stimulus identity prediction from neuronal activity in older tadpoles, compared to younger ones, suggests that both stages fall on the “plateau”. If true, this would mean that less robust collision avoidance in behaving stage 46 tadpoles \citep{dong2009} is likely to be due to maturation of sensorimotor connections from the tectum to the hindbrain, which we did not assess in this study.
 
-Second,
-
-A relatively poor fit between network predictions and biological experiments may be a consequence of low statistical power of this study. With 14 and 16 networks for two developmental stages respectively, we could only hope to detect changes of Cohen $d \approx$ 1.0, assuming $p_t<$ 0.05 threshold and 80\% power. Moreover, based on available imaging studies, we can estimate that at stage 49, one side of a tadpole tectum contains about 10-15 thousand neurons, as it is about 40 cells across \citep{hiramoto2009}, and packed 6-10 cells deep in its thickest part \citep{hewapathirane2008vivo}, while tapering towards the edges \citep{bollmann2009}. On the other hand, here we reconstructed connectivity within the top layer of 128$\pm$40 cells, in a field of about 12 by 12 neurons, which means that our reconstructions covered only about 1\% of a full tectal network. With a coverage so sparse, our parameter estimations were expected to be noisy, further lowering the power of our tests. The best way to address these concerns would be to run a set of control experiment, analyzing transfer entropy between pairs of cells known to be either connected or not, to estimate the actual power of graph reconstruction under these conditions. One possible approach could be to combine Ca imaging recordings with paired whole-cell recordings, probing connections by brief depolarization of one cell and recording of synaptic currents in the other. Unfortunately, this type of experiments was beyond our technical ability, so we had to rely on indirect signs of successful network reconstruction. Two most important observations that support our results, are the fact that the share of reciprocal connections decreased in development; and that we observed a consistent non-randomness of almost all network measurements in reconstructed networks. Also, we were assured by the replication of tectal response shapes (compared to \citep{khakhalin2014}, the internal replication of edge detection between stimuli types (see Methods), and observation of retinotopy during responses to looming stimuli. We therefore conclude that selective staining of neurons in a living brain, followed by high-speed ($\sim$100 frames/s) calcium imaging, allows reconstruction of directed local network connectivity.
-
-% Finally, the third possibility is that selectivity mechanisms are just entirely different (even though STDP is still a major force here, clearly).
-
-
-Our data suggests that the changes in degree distribution, that were observed both in the model and in imaging experiments, are largely a consequence of synaptic competition. It explicitly promoted connectivity in weakly connected neurons, while "punishing" overconnected cells, which created more light-frame, openwork graph structures \citep{fiete2010chains}. The change in modularity observed in our network supports results previously described in networks governed by Hebbian plasticity \citep{triplett2018emergence,damicelli2018topomod}, and different implementations of STDP \citep{stam2010modular,litwin2014assemblies}. We did not observe changes in the number of neuronal ensembles \citep{avitan2017spontaneous,pietri2017emergence}, but we believe that it is only because our experiments were not well suited for ensemble detection, as we worked with strong shared inputs that reliably activated almost every neuron in the network. This is very different from a case of spontaneous activity, where different sub-networks get activated randomly, with activity propagating within modules more readily than between them.
 
 The sensitivity analysis showed that of all modeling assumptions, the presence of patterned visual stimulation was most important. The model converged to a state suitable for looming detection even if STDP, synaptic competition, or intrinsic plasticity were disrupted, but it failed if sensory inputs were kept random. Moreover, it was not critical for the model to be trained on looming stimuli: it performed almost as well with a mix of oblique looming, receding, and translating stimuli, which means that it is stimulus locality and edge continuity that mattered for the development. This also suggests that proper tectal network organization can emerge from responses to retinal waves alone, provided that they have spatial and temporal statistics similar to that of behaviorally relevant visual stimuli \citep{huberman2008waves}. Note that our model predicts disrupted tectal organization in enucleated or dark-reared animals, which matches experimental research in tadpoles \citep{xu2011}, but seems to contradict some experiemntal observations from zebrafish \citep{pietri2017emergence}.
 
