tex: discussion, second run

--- a/refs.bib
+++ b/refs.bib
@@ -1256,6 +1256,13 @@
   publisher={Elsevier}
 }
 
+@article{mehler2018lure,
+  title={The lure of causal statements: Rampant mis-inference of causality in estimated connectivity},
+  author={Mehler, David Marc Anton and Kording, Konrad Paul},
+  journal={arXiv preprint arXiv:1812.03363},
+  year={2018}
+}
+
 @article{pauli2018repro,
   title={Reproducing polychronization: a guide to maximizing the reproducibility of spiking network models},
   author={Pauli, Robin and Weidel, Philipp and Kunkel, Susanne and Morrison, Abigail},
@@ -1274,4 +1281,13 @@
   pages={e1006421},
   year={2018},
   publisher={Public Library of Science}
+}
+
+@article{busch2019,
+  title={Intrinsic temporal tuning of neurons in the optic tectum is shaped by multisensory experience},
+  author={Busch, Silas E and Khakhalin, Arseny S},
+  journal={bioRxiv},
+  pages={540898},
+  year={2019},
+  publisher={Cold Spring Harbor Laboratory}
 }
